ec2.tf
resource "aws_instance" "jenkins_server" {

  ami                    = var.ami

  instance_type          = var.instance_type

  subnet_id              = aws_subnet.public_subnet.id

  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]

  key_name               = var.key_name

  associate_public_ip_address = true

  tags = {

    Name = "Jenkins-Server"

  }

}
